[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Base.gd" type="Script" id=1]
[ext_resource path="res://assets/normal.png" type="Texture" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.10066

[node name="Base" type="Node2D"]

[node name="Base" type="RigidBody2D" parent="."]
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
sleeping = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Base"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
shape = SubResource( 2 )

[node name="CureTimer" type="Timer" parent="Base"]
wait_time = 14.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="Base"]
[connection signal="body_entered" from="Base" to="Base" method="_on_Base_body_entered"]
[connection signal="timeout" from="Base/CureTimer" to="Base" method="_on_CureTimer_timeout"]
[connection signal="timeout" from="Base/DeathTimer" to="Base" method="_on_DeathTimer_timeout"]
